--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <a-scene altspace="fullspace: true">
   <a-assets>
-    <img id="sky" src="sky.jpg">
+    <img id="sky" src="resources/sky.jpg">
   </a-assets>
   <a-sky src="#sky" radius="100"></a-sky>
 </a-scene>
