--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
   <a-sky src="#sky" radius="100"></a-sky>
   
   <!-- Beer Pong -->
-  <a-entity id="beer-pong" position="0.32 0.28 3.77" rotation="0 65 0">
+  <a-entity id="beer-pong" position="4.16 1.677 -1.49" rotation="0 65 0">
     <a-entity n-spawner="res:interactables/pingpong-ball" position="0 0 0"></a-entity>
     <a-entity id="beer-pong-left" position="-2 0 0" rotation="0 0 0">
-      <a-entity n-spawner="res:objects/cup" position="0 0 0"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="-0.1 0 -0.15"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="0.1 0 -0.15"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="0.2 0 -0.3"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="0 0 -0.3"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="-0.2 0 -0.3"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="-0.3 0 -0.45"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="-0.1 0 -0.45"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="0.1 0 -0.45"></a-entity>
-      <a-entity n-spawner="res:objects/cup" position="0.3 0 -0.45"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0 0 0"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="-0.1 0 -0.15"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0.1 0 -0.15"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0.2 0 -0.3"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0 0 -0.3"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="-0.2 0 -0.3"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="-0.3 0 -0.45"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="-0.1 0 -0.45"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0.1 0 -0.45"></a-entity>
+      <a-entity n-spawner="res:interactables/red-cup" position="0.3 0 -0.45"></a-entity>
     </a-entity>
   </a-entity>
   
   <!-- Sports Stuff -->
-  <a-entity n-spawner="res:interactables/flying-disc" position="21 0.32 11" rotation="0 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/basketball" position="21 0.32 11" rotation="0 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/soccerball" position="21 0.32 11" rotation="0 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/football" position="21 0.32 11" rotation="0 0 0"></a-entity>
+  <a-entity n-spawner="res:interactables/flying-disc" position="10 0.9 13.45" rotation="0 0 0"></a-entity>
+  <a-entity n-spawner="res:interactables/basketball" position="9.8 0.9 12.5" rotation="0 0 0"></a-entity>
+  <a-entity n-spawner="res:interactables/soccerball" position="9.8 0.9 10.7" rotation="0 0 0"></a-entity>
+  <a-entity n-spawner="res:interactables/football" position="9.8 0.9 9.4" rotation="0 0 0"></a-entity>
 
   <!-- Animals -->
-  <a-entity n-object="res:objects/panda-standing" position="-4 0 1" scale="4 4 4" rotation="0 20 0"></a-entity>
-  <a-entity n-object="res:objects/bear-standing" position="-2 0 0" scale="4 4 4"></a-entity>
-  <a-entity n-object="res:objects/dog-standing" position="0 0 0" scale="4 4 4"></a-entity>
-  <a-entity n-object="res:objects/cat-standing" position="2 0 1" scale="4 4 4" rotation="0 -20 0"></a-entity>									      
+  <a-entity n-object="res:objects/panda-standing" position="-4 0 1" scale="1 1 1" rotation="0 20 0"></a-entity>
+  <a-entity n-object="res:objects/bear-standing" position="-2 0 0" scale="1 1 1"></a-entity>
+  <a-entity n-object="res:objects/dog-standing" position="0 0 0" scale="1 1 1"></a-entity>
+  <a-entity n-object="res:objects/cat-standing" position="2 0 1" scale="1 1 1" rotation="0 -20 0"></a-entity>									      
 	
   <!-- Glow Sticks -->
   <a-entity n-spawner="res:interactables/glowstick-green" position="-3.5 1 -11" rotation="30 0 0"></a-entity>
