--- a/highrise.html
+++ b/highrise.html
@@ -8,24 +8,24 @@
 <a-scene altspace="fullspace: true">
   <a-assets>
     <img id="sky" src="resources/sky-ocean.jpg">
-    <img id="image1" src="https://account.altvr.com/hosted_contents/809000276408140568">
-    <img id="image2" src="https://account.altvr.com/hosted_contents/809000269177160469">
-    <img id="image3" src="https://account.altvr.com/hosted_contents/809000260813718292">
-    <img id="image4" src="https://account.altvr.com/hosted_contents/809000237266895633">
-    <img id="image5" src="https://account.altvr.com/hosted_contents/809000230262407952">
-    <img id="image6" src="https://account.altvr.com/hosted_contents/809000205633454860">
+    <img id="image1" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000276408140568/Phil2017-11-03_11-35-18.jpg">
+    <img id="image2" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000269177160469/Phil2017-10-19_14-04-17.jpg">
+    <img id="image3" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000260813718292/Phil2017-10-19_14-03-46.jpg">
+    <img id="image4" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000237266895633/Phil2017-08-02_12-12-58.jpg">
+    <img id="image5" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000230262407952/Phil2017-08-02_12-12-23.jpg">
+    <img id="image6" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000205633454860/Phil2016-11-14_17-46-00.jpg">
   </a-assets>
   
   <!-- Sky -->
   <a-sky src="#sky" radius="100"></a-sky>
   
   <!-- Images -->
-  <a-plane src="#image1" position="31.6 7.15 1.73" rotation="0 -90 0" width="8" height="4.5"></a-plane>
-  <a-plane src="#image2" position="4.25 5.9 -14.9" rotation="0 0 0" width="1" height="0.5625"></a-plane>
-  <a-plane src="#image3" position="0.529 5.9 -14.9" rotation="0 0 0" width="1" height="0.5625"></a-plane>
-  <a-plane src="#image4" position="-3.197 5.9 -14.9" rotation="0 0 0" width="1" height="0.5625"></a-plane>
-  <a-plane src="#image5" position="-6.386 5.9 -12.65" rotation="0 90 0" width="1" height="0.5625"></a-plane>
-  <a-plane src="#image6" position="-6.386 5.9 -10.17" rotation="0 90 0" width="1" height="0.5625"></a-plane>
+  <a-plane src="#image1" position="31.6 7.15 1.73" rotation="0 -90 0" width="16" height="9" scale="0.5 0.5"></a-plane>
+  <a-plane src="#image2" position="4.25 5.9 -14.9" rotation="0 0 0" width="16" height="9" scale="0.1 0.1"></a-plane>
+  <a-plane src="#image3" position="0.529 5.9 -14.9" rotation="0 0 0" width="16" height="9" scale="0.1 0.1"></a-plane>
+  <a-plane src="#image4" position="-3.197 5.9 -14.9" rotation="0 0 0" width="16" height="9" scale="0.1 0.1"></a-plane>
+  <a-plane src="#image5" position="-6.386 5.9 -12.65" rotation="0 90 0" width="16" height="9" scale="0.1 0.1"></a-plane>
+  <a-plane src="#image6" position="-6.386 5.9 -10.17" rotation="0 90 0" width="16" height="9" scale="0.1 0.1"></a-plane>
   
   <!-- Native Resources -->
   <a-entity n-spawner="res:interactables/flying-disc" position="1 1 2" rotation="0 0 0"></a-entity>
