--- a/highrise.html
+++ b/highrise.html
@@ -30,10 +30,14 @@
   <!-- Native Resources -->
   <a-entity n-spawner="res:interactables/flying-disc" position="1 1 2" rotation="0 0 0"></a-entity>
   <a-entity n-spawner="res:interactables/basketball" position="2 1 3" rotation="0 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/glowstick-green" position="-3.5 1 5" rotation="30 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/glowstick-purple" position="-4 1 5" rotation="30 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/glowstick-red" position="-2.5 1 5" rotation="30 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/glowstick-orange" position="-2 1 5" rotation="30 0 0"></a-entity>
+  
+  <!-- Glow Sticks -->
+  <a-entity position="1.5 1.5 -4" rotation="-30 -15 0">
+    <a-entity n-spawner="res:interactables/glowstick-green" position="-0.75 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/glowstick-purple" position="-0.25 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/glowstick-red" position="0.25 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/glowstick-orange" position="0.75 0 0"></a-entity>
+  </a-entity>
 
 </a-scene>
 </body>
