--- a/highrise.html
+++ b/highrise.html
@@ -28,8 +28,13 @@
   <a-plane src="#image6" position="-6.3 5.9 10.35" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   
   <!-- Native Resources -->
-  <a-entity n-spawner="res:interactables/flying-disc" position="1 1 2" rotation="0 0 0"></a-entity>
-  <a-entity n-spawner="res:interactables/basketball" position="2 1 3" rotation="0 0 0"></a-entity>
+  <a-entity position="22 1 -11" rotation"0 0 0">
+    <a-entity n-spawner="res:interactables/flying-disc" position="-1 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/basketball" position="-0.5 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/soccerball" position="0 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/bowlingball" position="0.5 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/bowling-pin" position="1 0 0" rotation="0 0 0"></a-entity>
+  </a-entity>
   
   <!-- Glow Sticks -->
   <a-entity position="1.5 1.2 -4.2" rotation="-30 23 0">
