--- a/highrise.html
+++ b/highrise.html
@@ -28,12 +28,12 @@
   <a-plane src="#image6" position="-6.3 5.9 10.35" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   
   <!-- Native Resources -->
-  <a-entity position="22 1 -11" rotation"0 0 0">
-    <a-entity n-spawner="res:interactables/flying-disc" position="-1 0 0" rotation="0 0 0"></a-entity>
-    <a-entity n-spawner="res:interactables/basketball" position="-0.5 0 0" rotation="0 0 0"></a-entity>
+  <a-entity position="22 1 -11" rotation="0 -5 0">
+    <a-entity n-spawner="res:interactables/flying-disc" position="-2 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/basketball" position="-1 0 0" rotation="0 0 0"></a-entity>
     <a-entity n-spawner="res:interactables/soccerball" position="0 0 0" rotation="0 0 0"></a-entity>
-    <a-entity n-spawner="res:interactables/bowlingball" position="0.5 0 0" rotation="0 0 0"></a-entity>
-    <a-entity n-spawner="res:interactables/bowling-pin" position="1 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/bowlingball" position="1 0 0" rotation="0 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/bowling-pin" position="2 0 0" rotation="0 0 0"></a-entity>
   </a-entity>
   
   <!-- Glow Sticks -->
