--- a/highrise.html
+++ b/highrise.html
@@ -15,6 +15,7 @@
     <img id="image5" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000230262407952/Phil2017-08-02_12-12-23.jpg">
     <img id="image6" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000205633454860/Phil2016-11-14_17-46-00.jpg">
     <img id="image7" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000205633454860/Phil2016-11-14_17-46-00.jpg">
+    <img id="image8" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000205633454860/Phil2016-11-14_17-46-00.jpg">
   </a-assets>
   
   <!-- Sky -->
@@ -27,7 +28,8 @@
   <a-plane src="#image4" position="-3.197 5.9 14.9" rotation="0 180 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   <a-plane src="#image5" position="-6.3 5.9 12.74" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   <a-plane src="#image6" position="-6.3 5.9 10.35" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
-  <a-plane src="#image7" position="-9.8 2.6 12" rotation="0 -90 0" width="16" height="9" scale="2 2"></a-plane>
+  <a-plane src="#image7" position="-9.8 2.6 12" rotation="0 180 0" width="16" height="9" scale="2 2"></a-plane>
+  <a-plane src="#image8" position="-6.4 0.668 -10.7" rotation="0 -90 0" width="16" height="9" scale="2 2"></a-plane>
   
   <!-- Native Resources -->
   <a-entity position="22 1 -11" rotation="0 -5 0">
