--- a/highrise.html
+++ b/highrise.html
@@ -28,8 +28,8 @@
   <a-plane src="#image4" position="-3.197 5.9 14.9" rotation="0 180 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   <a-plane src="#image5" position="-6.3 5.9 12.74" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   <a-plane src="#image6" position="-6.3 5.9 10.35" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
-  <a-plane src="#image7" position="-9.8 2.6 12" rotation="0 180 0" width="16" height="9" scale="2 2"></a-plane>
-  <a-plane src="#image8" position="-6.4 0.668 -10.7" rotation="0 -90 0" width="16" height="9" scale="2 2"></a-plane>
+  <a-plane src="#image7" position="-9.9 2.7 12" rotation="0 180 0" width="16" height="9" scale="0.2 0.2"></a-plane>
+  <a-plane src="#image8" position="-6.45 0.7 -10.7" rotation="0 -63 0" width="16" height="9" scale=".16 0.16"></a-plane>
   
   <!-- Native Resources -->
   <a-entity position="22 1 -11" rotation="0 -5 0">
