--- a/highrise.html
+++ b/highrise.html
@@ -7,7 +7,7 @@
 <body>
 <a-scene altspace="fullspace: true">
   <a-assets>
-    <img id="sky" src="resources/sky-ocean.jpg">
+    <img id="sky" src="resources/sky-forest.jpg">
     <img id="image1" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000276408140568/Phil2017-11-03_11-35-18.jpg">
     <img id="image2" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000269177160469/Phil2017-10-19_14-04-17.jpg">
     <img id="image3" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000260813718292/Phil2017-10-19_14-03-46.jpg">
