--- a/highrise.html
+++ b/highrise.html
@@ -16,6 +16,7 @@
     <img id="image6" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000205633454860/Phil2016-11-14_17-46-00.jpg">
     <img id="image7" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000195156083460/Phil2016-09-21_15-48-37.jpg">
     <img id="image8" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000172758500095/Phil2016-09-14_21-55-18.jpg">
+    <img id="image9" src="https://d16l1eke1uksqy.cloudfront.net/uploads/hosted_content/image/809000172758500095/Phil2016-09-14_21-55-18.jpg">
   </a-assets>
   
   <!-- Sky -->
@@ -30,6 +31,7 @@
   <a-plane src="#image6" position="-6.3 5.9 10.35" rotation="0 90 0" width="16" height="9" scale="0.105 0.105"></a-plane>
   <a-plane src="#image7" position="-9.9 2.7 12" rotation="0 180 0" width="16" height="9" scale="0.2 0.2"></a-plane>
   <a-plane src="#image8" position="-6.45 0.7 -10.65" rotation="0 -64 0" width="16.5" height="9" scale=".17 0.17"></a-plane>
+  <a-plane src="#image9" position="-3.696 7.109 6.008" rotation="0 -90 0" width="16.5" height="9" scale=".105 0.105"></a-plane>
   
   <!-- Native Resources -->
   <a-entity position="22 1 -11" rotation="0 -5 0">
