--- a/highrise.html
+++ b/highrise.html
@@ -33,7 +33,7 @@
   <a-plane src="#image8" position="-6.45 0.7 -10.65" rotation="0 -64 0" width="16.5" height="9" scale=".17 0.17"></a-plane>
   <a-plane src="#image9" position="-3.696 7.109 6.008" rotation="0 -90 0" width="20" height="9" scale=".105 0.105"></a-plane>
   
-  <!-- Native Resources -->
+  <!-- Toys -->
   <a-entity position="22 1 -11" rotation="0 -5 0">
     <a-entity n-spawner="res:interactables/flying-disc" position="-2 0 0" rotation="0 0 0"></a-entity>
     <a-entity n-spawner="res:interactables/basketball" position="-1 0 0" rotation="0 0 0"></a-entity>
@@ -48,6 +48,15 @@
     <a-entity n-spawner="res:interactables/glowstick-purple" position="-0.25 0 0"></a-entity>
     <a-entity n-spawner="res:interactables/glowstick-red" position="0.25 0 0"></a-entity>
     <a-entity n-spawner="res:interactables/glowstick-orange" position="0.75 0 0"></a-entity>
+  </a-entity>
+  
+  <!-- Grill -->
+  <a-entity position="11.104 5.251 19.65" rotation="0 0 0">
+    <a-entity n-object="res:objects/charcoal-grill" position="-0.75 0 0"></a-entity>
+    <a-entity n-object="res:objects/bbq-cart" position="0.75 0 0"></a-entity>
+    <a-entity n-spawner="res:interactables/spatula" position="-0.85 1.5 0"></a-entity>
+    <a-entity n-spawner="res:interactables/burger-patty" position="-0.65 1.5 -0.1"></a-entity>
+    <a-entity n-spawner="res:interactables/burger-sandwich" position="-0.65 1.5 0.1"></a-entity>
   </a-entity>
 
 </a-scene>
