--- a/highrise.html
+++ b/highrise.html
@@ -51,12 +51,12 @@
   </a-entity>
   
   <!-- Grill -->
-  <a-entity position="11.104 5.251 19.65" rotation="0 0 0">
+  <a-entity position="11.104 4.3 19.65" rotation="0 0 0">
     <a-entity n-object="res:objects/charcoal-grill" position="-0.75 0 0"></a-entity>
-    <a-entity n-object="res:objects/bbq-cart" position="0.75 0 0"></a-entity>
-    <a-entity n-spawner="res:interactables/spatula" position="-0.85 1.5 0"></a-entity>
-    <a-entity n-spawner="res:interactables/burger-patty" position="-0.65 1.5 -0.1"></a-entity>
-    <a-entity n-spawner="res:interactables/burger-sandwich" position="-0.65 1.5 0.1"></a-entity>
+    <a-entity n-object="res:objects/bbq-cart" position="0.75 90 0" rotation="0 90 0"></a-entity>
+    <a-entity n-spawner="res:interactables/spatula" position="0.85 1 0" rotation="0 180 0"></a-entity>
+    <a-entity n-spawner="res:interactables/burger-patty" position="0.64 1 -0.1"></a-entity>
+    <a-entity n-spawner="res:interactables/burger-sandwich" position="0.63 1 0.1"></a-entity>
   </a-entity>
 
 </a-scene>
