--- a/gltf.html
+++ b/gltf.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Native glTF</title>
 	<script src="https://aframe.io/releases/0.7.0/aframe.js"></script>
-	<script src='http://altspacevr.github.io/altspacesdk/dist/altspace.js'></script>
+	<script src="https://sdk.altvr.com/libs/altspace.js/2.8.0/altspace.min.js"></script>
 </head>
 <body>
 <a-scene altspace>
