--- a/gltf.html
+++ b/gltf.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <a-scene altspace>
-	<a-entity id='native' n-gltf='url: https://ugcorigin.s-microsoft.com/12/2777a412-0000-0000-7a48-6505c2194d79/952/1508422891316.gltf'></a-entity>
+	<a-entity id='native' n-gltf='url: https://ugcorigin.s-microsoft.com/12/2777a412-0000-0000-7a48-6505c2194d79/952/1508422891316.gltf'
+		  scale="1000 1000 1000">
+	</a-entity>
 </a-scene>
 </body>
 </html>
