--- a/gltf.html
+++ b/gltf.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <a-scene altspace>
-	<a-entity id='native' n-gltf='url: https://ugcorigin.s-microsoft.com/12/2777a412-0000-0000-7a48-6505c2194d79/952/1508422891316.gltf'
-		  scale="10 10 10">
+	<a-entity id='native' 
+		  n-gltf='url: https://ugcorigin.s-microsoft.com/12/2777a412-0000-0000-7a48-6505c2194d79/952/1508422891316.gltf'
+		  scale="0.1 0.1 0.1">
 	</a-entity>
 </a-scene>
 </body>
